add initial gui