@@ -10,19 +10,6 @@
   <name>git-doing-core</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>14</source>
-          <target>14</target>
-          <compilerArgs>--enable-preview</compilerArgs>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 
   <parent>
     <groupId>com.github.joostvdg.gitdoing</groupId>
