@@ -15,7 +15,7 @@
     <groupId>com.github.joostvdg.gitdoing</groupId>
     <artifactId>git-doing-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
-	</parent>
+  </parent>
 
   <dependencies>
     <dependency>
@@ -24,25 +24,48 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-      <dependency>
-          <groupId>com.github.joostvdg.gitdoing</groupId>
-          <artifactId>git-doing-api</artifactId>
-          <version>1.0-SNAPSHOT</version>
-          <scope>compile</scope>
-      </dependency>
     <dependency>
-      <groupId>com.github.joostvdg.gitdoing</groupId>
-      <artifactId>git-doing-core</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <scope>compile</scope>
+        <groupId>com.github.joostvdg.gitdoing</groupId>
+        <artifactId>git-doing-api</artifactId>
+        <version>${project.version}</version>
+        <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.github.joostvdg.gitdoing</groupId>
       <artifactId>git-doing-core</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${project.version}</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>15.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>15.0.1</version>
     </dependency>
   </dependencies>
 
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.5</version>
+        <configuration>
+          <mainClass>com.github.joostvdg.gitdoing.gui/com.github.joostvdg.gitdoing.gui.App</mainClass>
+          <options>
+            <option>--add-opens</option>
+            <option>java.base/java.lang=com.github.joostvdg.gitdoing.gui</option>
+            <option>--enable-preview</option>
+          </options>
+          <commandlineArgs>--enable-preview</commandlineArgs>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
